test/captureIndexReplacement7_2.slq

def main(){
	x:=H(0:ğ”¹);
	a:=vector(3,x);
	forget(x=a[0]);
	(a[0],f):=(0:ğ”¹,(){ // error
		i:=1,j:=2;
		(a[i],a[j]):=(a[j],a[i]); // error
		return a; // error
	});
	return f;
}
